# fermat

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  expr.cpp  fermat.cpp  meson.build
.github/workflows/: cmake.yml
source/: debugging.hpp  error.hpp  expr.cpp  expr.hpp  fermat.cpp  fermat.hpp  jit.cpp  jit.hpp  operand.cpp  operand.hpp  operation.hpp  operation_impl.cpp  operation_impl.hpp  partially_evaluated.cpp  partially_evaluated.hpp  simplify.cpp  simplify.hpp
testing/: bench.cpp
